# SimpleRpc

./: .gitignore  CMakeLists.txt  Client.cpp  README.md  Server.cpp  SimpleRPC.proto  SimpleRpc.proto  SimpleRpcChannel.cpp  SimpleRpcChannel.h  SimpleRpcServer.cpp  SimpleRpcServer.h  SimpleRpcService.cpp  SimpleRpcService.h  build.cmd  build.sh  nn.cpp  nn.h  utils.cpp  utils.h
